GNOME Bugzilla – Bug 674356
Info panel disk size incorrect
Last modified: 2012-04-19 11:02:48 UTC
My hdd is 320GB, NFS totals about 450GB and in my case the result 790GB is usually reported as the disk size (with 20GB taken from somewhere, I don't know what exactly). The interesting thing happens when I umount the NFS mounts then the disk size is suddenly reported as 1.3TB. The version I have is 3.4.1 as included in Ubuntu 12.04.
commit 4c5fb84dd6c398934989479c9374d3736d9b057a Author: Bastien Nocera <hadess@hadess.net> Date: Thu Apr 19 12:00:04 2012 +0100 info: Ignore NFS mounts when calculating disk size https://bugzilla.gnome.org/show_bug.cgi?id=674356