info: Ignore NFS mounts when calculating disk size

https://bugzilla.gnome.org/show_bug.cgi?id=674356